--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,5 +17,4 @@
 @import "partials/_orbit-clockwise.scss";
 @import "partials/_orbit-counterclock.scss";
 @import "partials/_snake-right-left.scss";
-@import "partials/_elements-styling.scss";
-@import "partials/_choose-color.scss"
+@import "partials/_elements-styling.scss"
