--- a/src/template/blink.pug
+++ b/src/template/blink.pug
@@ -12,10 +12,10 @@ html(lang="en")
 		.container-fluid
 			.row
 				.col-sm-12.main-cont#gradient
-					#timer-cont.main-timer
-						button.button#startanim Start
-						br
-						span#timer
+					//- #timer-cont.main-timer
+					button.btn.btn-1.btn-1a#startanim Start
+					br
+					span#timer
 					#anim-main
 						#anim-circle
 		script(src="../js/jquery.js")
