--- a/src/style/partials/_containers.scss
+++ b/src/style/partials/_containers.scss
@@ -20,19 +20,19 @@
 }
 
 // Контейнер для таймера с кнопкой
-.main-timer {
-	background-color: transparent;
-	width: 200px;
-	height: 70px;
-	position: absolute;
-	top: 10%;
-	left: calc(50% - 200px / 2);
-	text-align: center;
-	font-size: 20px;
-	transition: all 1s linear;
-	opacity: 1;
-	visibility: visible;
-}
+// .main-timer {
+// 	background-color: transparent;
+// 	width: 10vw;
+// 	height: 70px;
+// 	position: absolute;
+// 	top: 10%;
+// 	left: calc(50% - 10vw / 2);
+// 	text-align: center;
+// 	font-size: 20px;
+// 	transition: all 3s linear;
+// 	opacity: 1;
+// 	visibility: visible;
+// }
 
 // Скрытие контейнера таймера с кнопкой
 .main-timer-hide {
