--- a/src/style/partials/_elements-styling.scss
+++ b/src/style/partials/_elements-styling.scss
@@ -1,3 +1,29 @@
-#startanim {
-	width: 100%;
+.btn {
+	text-align: center;
+	border: none;
+	background: none;
+	cursor: pointer;
+	padding: 25px 80px;
+	display: inline-block;
+	// margin: 15px 30px;
+	text-transform: uppercase;
+	letter-spacing: 10px;
+	font-weight: 700;
+	outline: none;
+	transition: all 0.3s;
+	position: absolute;
+	margin: 0 auto;
+}
+
+/* Button 1 */
+.btn-1 {
+	border: 3px solid #fff;
+	color: #fff;
+}
+
+/* Button 1a */
+.btn-1a:hover,
+.btn-1a:active {
+	color: #0e83cd;
+	background: #fff;
 }
