--- a/src/template/blink.pug
+++ b/src/template/blink.pug
@@ -13,7 +13,7 @@ html(lang="en")
 			.row
 				.col-sm-12.main-cont#gradient
 					//- #timer-cont.main-timer
-					button.btn.btn-1.btn-1a#startanim Start
+					button.btn#startanim Начать
 					br
 					span#timer
 					#anim-main
