--- a/src/style/partials/_examples.scss
+++ b/src/style/partials/_examples.scss
@@ -29,3 +29,17 @@
 // circle-orbit-clockwise						19s |
 // circle-orbit-counterclock-wise		19s |39s
 // circle-snake-right-left					30s
+
+// @media screen and (min-width: 1px) and (max-width: 1083px) {
+// }
+
+// @media screen and (min-width: 1084px) and (max-width: 1643px) {
+
+// }
+
+// @media screen and (min-width: 1644px) and (max-width: 3008px) {
+
+// }
+
+// @media screen and (min-width: 3008px) and (max-width: 4096px) {
+// }
