--- a/src/style/partials/_elements-styling.scss
+++ b/src/style/partials/_elements-styling.scss
@@ -30,3 +30,15 @@
 		background: #FFFFFF;
 	}
 }
+
+.btn-end {
+	@extend .btn;
+}
+
+@media screen and (min-width: 1px) and (max-width: 1083px) {
+	.btn, .btn-end {
+		font-size: 16px;
+		padding: 15px 30px;
+		letter-spacing: 6px;
+	}
+}
