--- a/src/style/partials/_containers.scss
+++ b/src/style/partials/_containers.scss
@@ -3,8 +3,6 @@
 	height: 100vh;
 	width: 100vw;
 	padding: 0;
-	// Включение аппаратного ускорения (наверное)
-	transform: translateZ(0);
 	overflow: hidden;
 }
 
@@ -16,7 +14,9 @@
 	position: absolute;
 	top: 0%;
 	left: 0%;
-	transform: translateZ(0);
+	transform: transale3d(0,0,0);
+	backface-visibility: hidden;
+	perspective: 1000;
 }
 
 // Контейнер для таймера с кнопкой
@@ -49,9 +49,10 @@
 	visibility: visible;
 	opacity: 1;
 }
-.div {}
+
 // Окружность; выровнена по центру вьюпорта
 .main-circle {
+	transform: transale3d(0,0,0);
 	// background-color: #E57373;
 	background-color: rgba(229, 229, 229, 0.9);
 	border-radius: 50%;
@@ -62,6 +63,11 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	// transition: border-radius 1.5s;
+}
+
+.main-circle-hide {
+	opacity: 0;
+	transition: opacity 1.5s ease-in-out;
 }
 
 // Окружность; выравнивается по верхнему краю вьюпорта
