New menu icons and font size

--- a/src/index.pug
+++ b/src/index.pug
@@ -13,20 +13,20 @@ html.no-js(lang="en")
 					span(aria-hidden="true")
 				ul
 					li
-						a.active(href="template/blink.html")
-							span Home
+						a.active(href="#0")
+							span Главная
+					li
+						a(href="template/blink.html")
+							span Рекомендации
 					li
 						a(href="#0")
-							span Portfolio
+							span Начать упражнения
 					li
 						a(href="#0")
-							span Services
+							span Проверочные таблицы
 					li
 						a(href="#0")
-							span Store
-					li
-						a(href="#0")
-							span Contact
+							span Контакты
 				span.stretchy-nav-bg(aria-hidden="true")
 		main.cd-main-content
 		script(src="js/jquery.js")
