--- a/src/index.pug
+++ b/src/index.pug
@@ -16,10 +16,10 @@ html.no-js(lang="en")
 						a.active(href="#0")
 							span Главная
 					li
-						a(href="template/blink.html")
+						a(href="#0")
 							span Рекомендации
 					li
-						a(href="#0")
+						a(href="template/blink.html")
 							span Начать упражнения
 					li
 						a(href="#0")
@@ -29,5 +29,6 @@ html.no-js(lang="en")
 							span Контакты
 				span.stretchy-nav-bg(aria-hidden="true")
 		main.cd-main-content
+		#startanim
 		script(src="js/jquery.js")
 		script(src="js/main.js")
