--- a/src/style/partials/_main-menu.scss
+++ b/src/style/partials/_main-menu.scss
@@ -1,8 +1,4 @@
-/* -------------------------------- 
-
-Primary style
-
--------------------------------- */
+// Primary style
 
 * {
 	box-sizing: border-box;
@@ -30,15 +26,6 @@ a {
 img {
 	max-width: 100%;
 }
-
-/* -------------------------------- 
-
-Stretchy Nav style - common to:
- - basic navigation
- - add-content navigation
- - edit-content navigation
-
--------------------------------- */
 
 .cd-stretchy-nav {
 	position: fixed;
@@ -189,6 +176,12 @@ Stretchy Nav style - common to:
 			-webkit-transition: color 0.2s;
 			-moz-transition: color 0.2s;
 			transition: color 0.2s;
+			@media screen and (min-width: 301px) and (max-width: 1083px) {
+				font-size: 1rem;
+			}
+			@media screen and (min-width: 1px) and (max-width: 300px) {
+				font-size: 0.8rem;
+			}
 			&::after {
 				/* navigation item icons */
 				content: '';
@@ -546,225 +539,7 @@ Stretchy Nav style - common to:
 	}
 }
 
-/* -------------------------------- 
-
-add-content navigation style
-
--------------------------------- */
-
-.no-touch .cd-stretchy-nav.add-content.nav-is-visible ul a:hover span {
-	opacity: 1;
-	visibility: visible;
-	/* reset default style */
-	-webkit-transform: translateX(0);
-	-moz-transform: translateX(0);
-	-ms-transform: translateX(0);
-	-o-transform: translateX(0);
-	transform: translateX(0);
-}
-
-/* -------------------------------- 
-
-edit content
-
--------------------------------- */
-
-.cd-editable-content {
-	/* used to wrap the image and the navigation */
-	position: relative;
-	width: 90%;
-	max-width: 400px;
-	margin: 4em auto;
-	img {
-		display: block;
-		border-radius: .25em;
-	}
-}
-
-.cd-stretchy-nav.edit-content {
-	position: absolute;
-	top: 15px;
-	right: 15px;
-	.stretchy-nav-bg {
-		height: 30px;
-		width: 30px;
-		background-color: rgba(0, 0, 0, 0.4);
-		box-shadow: none;
-		-webkit-transition: background 0.2s, height 0.2s;
-		-moz-transition: background 0.2s, height 0.2s;
-		transition: background 0.2s, height 0.2s;
-	}
-	&.nav-is-visible .stretchy-nav-bg {
-		height: 100%;
-		background-color: rgba(0, 0, 0, 0.8);
-		/* reset default style */
-		box-shadow: none;
-	}
-	.cd-nav-trigger {
-		height: 30px;
-		width: 30px;
-		span {
-			opacity: 0;
-			background-color: transparent;
-			&::before {
-				-webkit-transform: rotate(-45deg);
-				-moz-transform: rotate(-45deg);
-				-ms-transform: rotate(-45deg);
-				-o-transform: rotate(-45deg);
-				transform: rotate(-45deg);
-			}
-			&::after {
-				-webkit-transform: rotate(45deg);
-				-moz-transform: rotate(45deg);
-				-ms-transform: rotate(45deg);
-				-o-transform: rotate(45deg);
-				transform: rotate(45deg);
-			}
-			/* used to create the 'X' icon when the navigation is open */
-			width: 12px;
-			&::before, &::after {
-				/* used to create the 'X' icon when the navigation is open */
-				width: 12px;
-			}
-		}
-		&::after {
-			/* edit icon */
-			content: '';
-			position: absolute;
-			height: 16px;
-			width: 16px;
-			left: 50%;
-			top: 50%;
-			bottom: auto;
-			right: auto;
-			-webkit-transform: translateX(-50%) translateY(-50%);
-			-moz-transform: translateX(-50%) translateY(-50%);
-			-ms-transform: translateX(-50%) translateY(-50%);
-			-o-transform: translateX(-50%) translateY(-50%);
-			transform: translateX(-50%) translateY(-50%);
-			background: url(../img/cd-sprite-3.svg) no-repeat 0 0;
-		}
-		span, &::after {
-			-webkit-transition: opacity 0.2s;
-			-moz-transition: opacity 0.2s;
-			transition: opacity 0.2s;
-		}
-	}
-}
-
-.no-touch .cd-stretchy-nav.edit-content .cd-nav-trigger:hover ~ .stretchy-nav-bg {
-	box-shadow: none;
-	background-color: rgba(0, 0, 0, 0.8);
-}
-
-.cd-stretchy-nav.edit-content {
-	&.nav-is-visible .cd-nav-trigger {
-		span {
-			opacity: 1;
-			&::before {
-				-webkit-transform: rotate(45deg);
-				-moz-transform: rotate(45deg);
-				-ms-transform: rotate(45deg);
-				-o-transform: rotate(45deg);
-				transform: rotate(45deg);
-			}
-			&::after {
-				-webkit-transform: rotate(135deg);
-				-moz-transform: rotate(135deg);
-				-ms-transform: rotate(135deg);
-				-o-transform: rotate(135deg);
-				transform: rotate(135deg);
-			}
-		}
-		&::after {
-			/* hide edit icon */
-			opacity: 0;
-		}
-	}
-	ul {
-		padding-top: 30px;
-		a {
-			width: 30px;
-			height: 30px;
-			line-height: 30px;
-			padding: 0;
-			&::after {
-				right: 7px;
-				background-image: url(../img/cd-sprite-3.svg);
-			}
-		}
-		li {
-			&:first-of-type a::after {
-				background-position: -16px 0;
-			}
-			&:nth-of-type(2) a::after {
-				background-position: -32px 0;
-			}
-			&:nth-of-type(3) a::after {
-				background-position: -48px 0;
-			}
-			&:nth-of-type(4) a::after {
-				background-position: -64px 0;
-			}
-		}
-		span {
-			position: absolute;
-			top: 0;
-			right: 35px;
-			height: 30px;
-			line-height: 30px;
-			padding: 0 1em;
-			opacity: 0;
-			visibility: hidden;
-			background-color: rgba(0, 0, 0, 0.55);
-			border-radius: 2px;
-			text-align: center;
-			-webkit-transition: opacity 0.2s, visibility 0.2s;
-			-moz-transition: opacity 0.2s, visibility 0.2s;
-			transition: opacity 0.2s, visibility 0.2s;
-			&::after {
-				/* triangle below the tooltip */
-				content: '';
-				position: absolute;
-				left: 100%;
-				top: 50%;
-				bottom: auto;
-				-webkit-transform: translateY(-50%);
-				-moz-transform: translateY(-50%);
-				-ms-transform: translateY(-50%);
-				-o-transform: translateY(-50%);
-				transform: translateY(-50%);
-				height: 0;
-				width: 0;
-				border: 4px solid transparent;
-				border-left-color: rgba(0, 0, 0, 0.55);
-			}
-		}
-	}
-	&.nav-is-visible ul span {
-		/* reset default style */
-		-webkit-animation: none;
-		-moz-animation: none;
-		animation: none;
-	}
-}
-
-.no-touch .cd-stretchy-nav.edit-content.nav-is-visible ul a:hover span {
-	opacity: 1;
-	visibility: visible;
-	/* reset default style */
-	-webkit-transform: translateX(0);
-	-moz-transform: translateX(0);
-	-ms-transform: translateX(0);
-	-o-transform: translateX(0);
-	transform: translateX(0);
-}
-
-/* -------------------------------- 
-
-main content basic style
-
--------------------------------- */
+// Main content basic style
 
 .cd-main-content {
 	position: relative;
@@ -774,11 +549,8 @@ main content basic style
 	background-color: #003c5d;
 }
 
-/* -------------------------------- 
+// Keyframes
 
-keyframes
-
--------------------------------- */
 @-webkit-keyframes scaleIn {
 	from {
 		-webkit-transform: translateY(-50%) scale(0);
