--- a/src/style/partials/_main-menu.scss
+++ b/src/style/partials/_main-menu.scss
@@ -14,8 +14,8 @@ html {
 body {
 	font-size: 1.6rem;
 	font-family: "Ubuntu", sans-serif;
-	color: #003c5d;
-	background-color: #ffffff;
+	// color: #003c5d;
+	// background-color: #ffffff;
 }
 
 a {
@@ -165,13 +165,14 @@ img {
 		-moz-transition: visibility 0.3s;
 		transition: visibility 0.3s;
 		text-align: right;
+		 list-style-type: none;
 		a {
 			position: relative;
 			display: block;
 			height: 50px;
 			line-height: 50px;
 			padding: 0 calc(1em + 60px) 0 1em;
-			color: rgba(255, 255, 255, 0.7);
+			color: rgba(0, 0, 0, 0.8);
 			font-size: 1.1rem;
 			-webkit-transition: color 0.2s;
 			-moz-transition: color 0.2s;
@@ -261,7 +262,7 @@ img {
 				transition: opacity 0.2s;
 			}
 			&.active {
-				color: #ffffff;
+				color: #0a9581;
 				&::after {
 					opacity: 1;
 				}
@@ -295,7 +296,8 @@ img {
 }
 
 .no-touch .cd-stretchy-nav.nav-is-visible ul a:hover {
-	color: #ffffff;
+	color: blue;
+	text-decoration: none;
 	&::after {
 		opacity: 1;
 	}
@@ -545,8 +547,13 @@ img {
 	position: relative;
 	z-index: 1;
 	min-height: 100vh;
+	width: 100vw;
 	padding: 100px 0;
-	background-color: #003c5d;
+	// background-color: #003c5d;
+	background-image: url(../img/eye.svg);
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 // Keyframes
