Change nav styling

--- a/src/style/partials/_main-menu.scss
+++ b/src/style/partials/_main-menu.scss
@@ -263,7 +263,7 @@ img {
 				transition: opacity 0.2s;
 			}
 			&.active { 
-				color: #077665; //COLOR
+				color: #077665;
 				font-weight: bold;
 				&::after {
 					opacity: 1;
