--- a/src/index.pug
+++ b/src/index.pug
@@ -8,7 +8,7 @@ html.no-js(lang="en")
 		title Stretchy Navigation | CodyHouse
 	body
 		header
-			nav.cd-stretchy-nav
+			nav.cd-stretchy-nav#main-nav
 				a.cd-nav-trigger(href="#0")
 					span(aria-hidden="true")
 				ul
@@ -29,6 +29,5 @@ html.no-js(lang="en")
 							span Контакты
 				span.stretchy-nav-bg(aria-hidden="true")
 		main.cd-main-content
-		#startanim
-		script(src="js/jquery.js")
+		//- script(src="js/jquery.js")
 		script(src="js/main.js")
