--- a/src/style/partials/_containers.scss
+++ b/src/style/partials/_containers.scss
@@ -1,3 +1,12 @@
+#gradient {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: #836997;
+}
+
 // Главный контейнер; 100% высоты и ширины вьюпорта
 .main-cont {
 	height: 100vh;
