--- a/src/template/blink.pug
+++ b/src/template/blink.pug
@@ -16,5 +16,5 @@ html(lang="en")
 					button.btn-end.btn-end-hide#tomain(onclick="location.href='../index.html'", type="button") На главную
 					#anim-main
 						#anim-circle
-		script(src="../js/jquery.js")
+		//- script(src="../js/jquery.js")
 		script(src="../js/main.js")
