--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,7 @@ html.no-js(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		link(rel="stylesheet", href="css/main.css")
 		script(src="js/modernizr.js")
-		title Stretchy Navigation | CodyHouse
+		title Blink
 	body
 		header
 			nav.cd-stretchy-nav#main-nav
