--- a/src/style/partials/_containers.scss
+++ b/src/style/partials/_containers.scss
@@ -13,6 +13,7 @@
 
 // Контейнер (100% вьюпорта) для окружности
 .linear-cont {
+	overflow: visible;
 	background-color: transparent;
 	height: 100vh;
 	width: 100vw;
@@ -22,22 +23,6 @@
 	transform: transale3d(0,0,0);
 	backface-visibility: hidden;
 	perspective: 1000;
-}
-
-// Скрытие кнопки запуска "Начать"
-.btn-hide {
-	visibility: hidden;
-	opacity: 0;
-}
-
-// Открытие кнопки "На главную"
-.btn-end-hide {
-		visibility: hidden;
-		opacity: 0;
-}
-.btn-end-show {
-	visibility: visible;
-	opacity: 1;
 }
 
 // Окружность; выровнена по центру вьюпорта
