--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,7 @@
 @import "../../bower_components/bootstrap/scss/_variables.scss";
 @import "../../bower_components/bootstrap/scss/_mixins.scss";
 @import "../../bower_components/bootstrap/scss/_normalize.scss";
-// @import "../../bower_components/bootstrap/scss/_reboot.scss";
+@import "../../bower_components/bootstrap/scss/_reboot.scss";
 @import "../../bower_components/bootstrap/scss/_grid.scss";
 @import "partials/_my-variables.scss";
 @import "partials/_containers.scss";
