Add recommendations page and initial text

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,10 +1,13 @@
 doctype html
-html.no-js(lang="en")
+html.no-js(lang="ru")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
+		meta(name="robots", content="all")
+		meta(name="description" lang="ru" content="Перенапряжение глаз в процессе работы за компьютером может привести не только к их покраснению и сухости, но и к потере остроты зрения. Вы можете снять напряжение и усталость, а также укрепить глазные мышцы с помощью комплексов упражнений и гимнастики для глаз. Данный сайт поможет сделать это правильно.")
+		meta(name="keywords" lang="ru" content="Глаза, упражнения для глаз, зрение, перенапряжение глаз, усталость глаз, глазные мышцы")
 		link(rel="stylesheet", href="css/main.css")
-		title Blink
+		title Blink - упражнения для глаз
 	body
 		header
 			nav.cd-stretchy-nav#main-nav
@@ -15,7 +18,7 @@ html.no-js(lang="en")
 						a.active(href="#0")
 							span Главная
 					li
-						a(href="#0")
+						a(href="template/recommendations.html")
 							span Рекомендации
 					li
 						a(href="template/blink.html")
