--- a/src/style/partials/blink/_elements-styling.scss
+++ b/src/style/partials/blink/_elements-styling.scss
@@ -1,3 +1,4 @@
+// Кнопка "Начать"
 .btn {
 	font-size: 20px;
 	text-align: center;
@@ -28,6 +29,7 @@
 	}
 }
 
+// Кнопка "На главную"
 .btn-end {
 	@extend .btn;
 }
