--- a/src/template/blink.pug
+++ b/src/template/blink.pug
@@ -1,10 +1,11 @@
 doctype html
-html.no-js(lang="en")
+html.no-js(lang="ru")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
+		meta(name="robots", content="all")
 		link(rel="stylesheet", href="../css/main.css")
-		title Blink
+		title Blink - упражнения для глаз
 	body
 		header
 			nav.cd-stretchy-nav.cd-stretchy-nav-blink#main-nav
@@ -15,7 +16,7 @@ html.no-js(lang="en")
 						a(href="../index.html")
 							span Главная
 					li
-						a(href="#0")
+						a(href="recommendations.html")
 							span Рекомендации
 					li
 						a.active(href="#0")
@@ -32,7 +33,7 @@ html.no-js(lang="en")
 			.row
 				.col-sm-12.main-cont#gradient
 					button.btn#startanim Начать
-					button.btn-end.btn-end-hide#tomain(onclick="location.href='../index.html'", type="button") На главную
+					button.btn-end.btn-end-hide#tomain(onclick="location.href='../index.html'") На главную
 					#anim-main
 						#anim-circle
 		script(src="../js/main.js")
