--- a/src/template/recommendations.pug
+++ b/src/template/recommendations.pug
@@ -8,7 +8,7 @@ html.no-js(lang="ru")
 		title Blink - упражнения для глаз
 	body
 		header
-			nav.cd-stretchy-nav#main-nav
+			nav.cd-stretchy-nav.cd-stretchy-nav-recom-s#main-nav
 				a.cd-nav-trigger(href="#0")
 					span(aria-hidden="true")
 				ul
@@ -30,41 +30,43 @@ html.no-js(lang="ru")
 				span.stretchy-nav-bg(aria-hidden="true")
 		main
 			.container-fluid
-				.row
-					.col-sm-12
-						h3 Рекомендации
-						p Перенапряжение глаз в процессе работы за компьютером может привести не только к их покраснению и сухости, но и к потере остроты зрения. Вы можете снять напряжение и усталость, а также укрепить глазные мышцы с помощью специальных комплексов упражнений и гимнастики для глаз.
-						h4 Советы
-						ul
-							li 
-								a(href="blink.html") Цикл упражнений 
-								| лучше выполнять утром и вечером (перед работой и после работы)
-							li За один раз делать не следует делать много повторений
-							li В случае ощущения дискомфорта нужно прекратить выполнение упражнений
-						h4 Упражнения для глаз
-						ul
-							li Вверх и вниз
-							li Влево и вправо
-							li Бабочка
-							li По диагонали с правового верхнего угла в левый нижний
-							li По диагонали с левого верхнего угла в правый нижний
-							li Бабочка
-							li По квадрату против часовой стрелки
-							li Бабочка
-							li По квадрату по часовой стрелке
-							li Бабочка
-							li По кругу против часовой стрелки
-							li По кругу по часовой стрелке
-							li Бабочка
-							li Змейка
-							li Пальминг
-						p После выполнения движений следует делать упражнение «Бабочка»:
-							br
-							| Это упражнение на расслабление мышц глаза. По сути это обычное моргание. Моргать нужно не только часто, но и очень мягко, легко, не напрягаясь, как, будто крылья бабочки.
-							br
-							| После выполнения комплекса упражнений следует сделать 
-							a(href="http://seeactive.by/methods/beits-palming.html" target="_blank") «Пальминг»:
-							br
-							| Закрыть глаза и на несколько минут плотно прикрыть их ладонями. В результате глаза расслабятся.
-						button(onclick="location.href='blink.html'") Перейти к упражнениям
-		script(src="../js/main.js")
+				.container
+					.row
+						.col-sm-12.recom-s
+							h2 Рекомендации
+							p Перенапряжение глаз в процессе работы за компьютером может привести не только к их покраснению и сухости, но и к потере остроты зрения. Вы можете снять напряжение и усталость, а также укрепить глазные мышцы с помощью специальных комплексов упражнений и гимнастики для глаз.
+							h4 Советы
+							ul
+								li 
+									a(href="blink.html") Цикл упражнений 
+									| лучше выполнять утром и вечером (перед работой и после работы)
+								li За один раз не следует делать много повторений
+								li В случае ощущения дискомфорта нужно прекратить выполнение упражнений
+							h4 Упражнения для глаз
+							ul
+								li Вверх и вниз
+								li Влево и вправо
+								li Бабочка
+								li По диагонали с правового верхнего угла в левый нижний
+								li По диагонали с левого верхнего угла в правый нижний
+								li Бабочка
+								li По квадрату против часовой стрелки
+								li Бабочка
+								li По квадрату по часовой стрелке
+								li Бабочка
+								li По кругу против часовой стрелки
+								li По кругу по часовой стрелке
+								li Бабочка
+								li Змейка
+								li Пальминг
+							p После выполнения движений следует делать упражнение «Бабочка»:
+								br
+								| Это упражнение на расслабление мышц глаза. По сути это обычное моргание. Моргать нужно не только часто, но и очень мягко, легко, не напрягаясь, как, будто крылья бабочки.
+								br
+								br
+								| После выполнения комплекса упражнений следует сделать 
+								a(href="http://seeactive.by/methods/beits-palming.html" target="_blank") «Пальминг»:
+								br
+								| Закрыть глаза и на несколько минут плотно прикрыть их ладонями. В результате глаза расслабятся.
+							button(onclick="location.href='blink.html'") Перейти к упражнениям
+			script(src="../js/main.js")
