--- a/src/style/partials/recommendations/_recommendations.scss
+++ b/src/style/partials/recommendations/_recommendations.scss
@@ -1,5 +1,5 @@
 .container-fluid {
-	background-image: url(../img/recom-s.svg);
+	background-image: url(../img/recoms.svg);
 	background-position: center center;
 	background-size: cover;
 	background-repeat: no-repeat;
