Add tables page

--- a/src/index.pug
+++ b/src/index.pug
@@ -24,7 +24,7 @@ html.no-js(lang="ru")
 						a(href="template/blink.html")
 							span Начать упражнения
 					li
-						a(href="#0")
+						a(href="template/tables.html")
 							span Проверочные таблицы
 					li
 						a(href="#0")
