--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -28,4 +28,7 @@
 @import "partials/main-menu/_main-menu.scss";
 
 // Импорт стилей для страницы "Рекомендации"
-@import "partials/recommendations/_recommendations.scss"
+@import "partials/recommendations/_recommendations.scss";
+
+// Импорт стилей для страницы "Проверочные таблицы"
+@import "partials/tables/_tables.scss"
