--- a/src/style/partials/recommendations/_recommendations.scss
+++ b/src/style/partials/recommendations/_recommendations.scss
@@ -1,4 +1,4 @@
-.container-fluid {
+.cont-background {
 	background-image: url(../img/recoms.svg);
 	background-position: center center;
 	background-size: cover;
