--- a/src/template/blink.pug
+++ b/src/template/blink.pug
@@ -22,7 +22,7 @@ html.no-js(lang="ru")
 						a.active(href="#0")
 							span Начать упражнения
 					li
-						a(href="#0")
+						a(href="tables.html")
 							span Проверочные таблицы
 					li
 						a(href="#0")
