--- a/src/template/recommendations.pug
+++ b/src/template/recommendations.pug
@@ -22,14 +22,14 @@ html.no-js(lang="ru")
 						a(href="blink.html")
 							span Начать упражнения
 					li
-						a(href="#0")
+						a(href="tables.html")
 							span Проверочные таблицы
 					li
 						a(href="#0")
 							span Контакты
 				span.stretchy-nav-bg(aria-hidden="true")
 		main
-			.container-fluid
+			.container-fluid.cont-background
 				.container
 					.row
 						.col-sm-12.recom-s
