--- a/src/style/partials/tables/_tables.scss
+++ b/src/style/partials/tables/_tables.scss
@@ -1,15 +1,133 @@
+.mg-top {
+	margin-top: 10vh;
+	text-align: center;
+	h2 {
+		font-size: 30px;
+		font-weight: bold;
+		padding-bottom: 5%;
+	}
+}
 .a1 {
-background: #FFD87B;
+position: relative;
+background-color: #FFD87B;
+margin: 50px 0;
+font-size: 20px;
+line-height: 33px;
+	img {
+		display: none;
+		position: absolute;
+		top: 0%;
+		left: 0%;
+		z-index: 1;
+		height: 600px;
+		border: 2px solid #666666;
+	}
+	button {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	width: 100%;
+	background-color: transparent;
+	cursor: pointer;
+	padding: 10px 100px;
+	outline: none;
+	transition: all 0.5s linear;
+	border: 2px solid transparent;
+	color: #666666;
+		&:hover {
+			color: #FFFFFF;
+			background: #FFD87B;
+			// border: 2px solid #666666;
+		}
+		&:active {
+			color: #FFFFFF;
+			background: #FFD87B;
+			// border: 2px solid #666666;
+		}
+		&:focus {
+			color: #FFFFFF;
+			background: #FFD87B;
+			// border: 2px solid #666666;
+		}
+	}
+	h4 {
+	padding: 20px 0;
+	text-align: center;
+	cursor: pointer;
+	display:block;
+		&:hover img {
+			display: block;
+		}
+		&:focus img {
+			display: block;
+		}
+	}
 }
 
 .a2 {
-background-color: #E6F180;
+@extend .a1;
+background-color: #74C1FF;
+	button {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	width: 100%;
+	background-color: transparent;
+	cursor: pointer;
+	padding: 10px 100px;
+	outline: none;
+	transition: all 0.5s linear;
+	border: 2px solid transparent;
+	color: #666666;
+		&:hover {
+			color: #FFFFFF;
+			background: #74C1FF;
+			// border: 2px solid #666666;
+		}
+		&:active {
+			color: #FFFFFF;
+			background: #74C1FF;
+			// border: 2px solid #666666;
+		}
+		&:focus {
+			color: #FFFFFF;
+			background: #74C1FF;
+			// border: 2px solid #666666;
+		}
+	}
 }
 
 .a3 {
-background-color: #6EA9F1;
+@extend .a1;
+background-color: #9176FF;
+margin-bottom: 10vh;
+	button {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	width: 100%;
+	background-color: transparent;
+	cursor: pointer;
+	padding: 10px 100px;
+	outline: none;
+	transition: all 0.5s linear;
+	border: 2px solid transparent;
+	color: #666666;
+		&:hover {
+			color: #FFFFFF;
+			background: #9176FF;
+			// border: 2px solid #666666;
+		}
+		&:active {
+			color: #FFFFFF;
+			background: #9176FF;
+			// border: 2px solid #666666;
+		}
+		&:focus {
+			color: #FFFFFF;
+			background: #9176FF;
+			// border: 2px solid #666666;
+		}
+	}
 }
 
-.a4 {
-background-color: #8A70F1;
-}
