--- a/src/template/tables.pug
+++ b/src/template/tables.pug
@@ -33,21 +33,24 @@ html.no-js(lang="ru")
 					.row.mg-top
 						h2 Таблицы проверки зрения
 					.row
-						.col-sm-12.a1
+						.col-sm-12.table-1
 							h4 Таблица Сивцева
-								img(src="../img/tables/1.jpg", alt="1.jpg")
-							p Данная таблица, по которой проверяют зрение большинство окулистов, состоит из 12 строк с буквами алфавита. Размер символов в каждой строке уменьшается сверху вниз. С левой стороны литерой «D» отмечено расстояние, с которого человек с нормальным зрением должен различать имеющиеся знаки. Оно составляет 2,5 метров для нижнего ряда и 5 – для верхнего. Чтобы точно проверить зрение по таблице, необходимо знать, какие символы в ней использованы. Справа буквой «V» обозначена величина в условных единицах, показывающая остроту при чтении символов с расстояния 5 метров (2,0 – если различим нижний ряд; 0,1 – если человек видит только верхний ряд). Зрение считается нормальным (1,0), если человек каждым глазом видит десятую строку при D=5,0.
-							button Скачать
+								img(src="../img/tables/Table 1.jpg", alt="1.jpg")
+							p Данная таблица, состоит из 12 строк с буквами алфавита. Размер символов в каждой строке уменьшается сверху вниз. С левой стороны литерой «D» отмечено расстояние, с которого человек с нормальным зрением должен различать имеющиеся знаки. Оно составляет 2,5 метров для нижнего ряда и 5 – для верхнего. Чтобы точно проверить зрение по таблице, необходимо знать, какие символы в ней использованы. Справа буквой «V» обозначена величина в условных единицах, показывающая остроту при чтении символов с расстояния 5 метров (2,0 – если различим нижний ряд; 0,1 – если человек видит только верхний ряд). Зрение считается нормальным (1,0), если человек каждым глазом видит десятую строку при D=5,0.
+							button
+								a(href="../img/tables/Table 1.jpg" download) Скачать
 					.row
-						.col-sm-12.a2
+						.col-sm-12.table-2
 							h4 Таблица Орловой
-								img(src="../img/tables/2.jpg", alt="2.jpg")
-							p Данный инструмент для диагностики остроты зрения по своему принципу напоминает предыдущие. Но ее используют для проверки зрения у детей, не умеющих читать. Именно поэтому вместо букв подобная таблица окулиста для проверки зрения содержит различные изображения. Размер строк с картинками уменьшается сверху вниз. Острота определяется так же, как и в инструменте для проверки зрения Сивцева. Нормой считается, когда ребенок видит десятую строку с расстояния 5 метров каждым глазом. Если он не распознает символы верхнего ряда с указанной дистанции, то его начинают приближать к таблице и каждые 0,5 метров спрашивать, видит ли он знаки. Так продолжают проверять до тех пор, пока ребенок не назовет правильно картинки верхнего ряда.
-							button Скачать
+								img(src="../img/tables/Table 2.jpg", alt="2.jpg")
+							p Данный инструмент для диагностики остроты зрения по своему принципу напоминает предыдущий. Но его используют для проверки зрения у детей, не умеющих читать. Именно поэтому вместо букв подобная таблица окулиста для проверки зрения содержит различные изображения. Размер строк с картинками уменьшается сверху вниз. Острота определяется так же, как и в инструменте для проверки зрения Сивцева. Нормой считается, когда ребенок видит десятую строку с расстояния 5 метров каждым глазом. Если он не распознает символы верхнего ряда с указанной дистанции, то его начинают приближать к таблице и каждые 0,5 метров спрашивать, видит ли он знаки. Так продолжают проверять до тех пор, пока ребенок не назовет правильно картинки верхнего ряда.
+							button
+								a(href="../img/tables/Table 2.jpg" download) Скачать
 					.row
-						.col-sm-12.a3
+						.col-sm-12.table-3
 							h4 Таблица Головина
-								img(src="../img/tables/3.jpg", alt="3.jpg")
+								img(src="../img/tables/Table 3.jpg", alt="3.jpg")
 							p Данный инструмент для диагностики глаз состоит из стандартного набора оптотипов. Подобные таблицы остроты зрения содержат комбинации равных по высоте и ширине колец с разрывами. Нормой считается, когда человек способен различить две удаленные точки с угловым разрешением, равным одной минуте. Стандартная таблица для проверки зрения Головина содержит оптотипы для определения остроты с расстояния 5 метров. При этом первые 10 строк различаются шагом в 0.1, следующие два ряда – в 0.5 и дополнительные три ряда - в 1.0. С левой стороны буквой D отмечена дистанция, с которой глаз со 100 % зрением различает указанный символ. Литера V, расположенная справа, обозначает фактическую остроту, если человек читает данный ряд с расстояния 5 метров.
-							button Скачать
+							button
+								a(href="../img/tables/Table 3.jpg" download) Скачать
 			script(src="../js/main.js")
