--- a/src/style/partials/main-menu/_main-menu.scss
+++ b/src/style/partials/main-menu/_main-menu.scss
@@ -164,7 +164,7 @@ img {
 			-webkit-transition: color 0.2s;
 			-moz-transition: color 0.2s;
 			transition: color 0.2s;
-			@media screen and (min-width: 301px) and (max-width: 1083px) {
+			@media screen and (min-width: 301px) and (max-width: 1400px) {
 				font-size: 16px;
 			}
 			@media screen and (min-width: 1px) and (max-width: 300px) {
@@ -250,7 +250,7 @@ img {
 			}
 			&.active { 
 				color: #077665;
-				font-weight: bold;
+				// font-weight: bold;
 				&::after {
 					opacity: 1;
 				}
@@ -279,7 +279,7 @@ img {
 			-webkit-transition: -webkit-transform 0.2s;
 			-moz-transition: -moz-transform 0.2s;
 			transition: transform 0.2s;
-			@media screen and (max-height: 800px) and (max-width: 1083px) {
+			@media screen and (max-height: 800px) and (max-width: 1400px) {
 			background-color: rgba(133,176,125, 1);
 			text-align: center;
 			padding: 0 15px;
