--- a/src/index.pug
+++ b/src/index.pug
@@ -18,13 +18,13 @@ html.no-js(lang="ru")
 						a.active(href="#0")
 							span Главная
 					li
-						a(href="template/recommendations.html")
+						a(href="templates/recommendations.html")
 							span Рекомендации
 					li
-						a(href="template/blink.html")
+						a(href="templates/blink.html")
 							span Начать упражнения
 					li
-						a(href="template/tables.html")
+						a(href="templates/tables.html")
 							span Проверочные таблицы
 					li
 						a(href="#0")
