Add contacts form

--- a/src/index.pug
+++ b/src/index.pug
@@ -28,7 +28,8 @@ html.no-js(lang="ru")
 							span Проверочные таблицы
 					li
 						a(href="#0")
-							span Контакты
+							span#showContacts Контакты
 				span.stretchy-nav-bg(aria-hidden="true")
 		main.cd-main-content
+			#contacts
 		script(src="js/main.js")
