Add close icon and close js

--- a/src/index.pug
+++ b/src/index.pug
@@ -32,4 +32,5 @@ html.no-js(lang="ru")
 				span.stretchy-nav-bg(aria-hidden="true")
 		main.cd-main-content
 			#contacts
+				a(href="javascript:closeContacts();").close-contacts
 		script(src="js/main.js")
