--- a/src/style/partials/main-menu/_main-menu.scss
+++ b/src/style/partials/main-menu/_main-menu.scss
@@ -550,20 +550,6 @@ img {
 	overflow: hidden;
 }
 
-#contacts {
-	background-color: rgba(129, 177, 218, 0.5);
-	width: 100%;
-	height: 100px;
-	position: absolute;
-	top: 100%;
-	transform: translateY(100%);
-	transition: all 1s ease-in-out;
-}
-
-.contacts-show {
-	transform: translateY(-100%) !important;
-}
-
 // Keyframes
 @-webkit-keyframes scaleIn {
 	from {
@@ -669,3 +655,51 @@ img {
 	visibility: hidden;
 	opacity: 0;
 }
+
+// Контакты
+#contacts {
+	background-color: rgba(129, 177, 218, 0.5);
+	width: 100%;
+	height: 100px;
+	position: absolute;
+	top: 100%;
+	transform: translateY(100%);
+	transition: all 1s ease-in-out;
+		&:hover {
+			.close-contacts {
+				visibility: visible !important;
+			}
+		}
+	a {
+		transition: all 0.2s linear;
+		margin-top: 10px;
+		// background-color: red;
+		text-decoration: none;
+		&:hover {
+		}
+	}
+}
+
+.contacts-show {
+	transform: translateY(-100%) !important;
+}
+
+.close-contacts {
+visibility: hidden;
+position: absolute;
+right: 0;
+top: 0;
+text-align: center;
+color: #FFFFFF;
+height: 30px;
+width: 30px;
+border:0;
+background: url(../img/eye-close.svg) no-repeat;
+	&::before {
+		display: block;
+		color: rgba(255, 255, 255, 1);
+		content: "";
+		font-size: 20px;
+	}
+}
+
