Add contacts icons/author/freepik

--- a/src/index.pug
+++ b/src/index.pug
@@ -33,4 +33,18 @@ html.no-js(lang="ru")
 		main.cd-main-content
 			#contacts
 				a(href="javascript:closeContacts();").close-contacts
+				.row
+					.col-sm-4
+						a(href="https://github.com/Farengeyt451" target="_blank")
+							img(src="img/icons/github.svg" alt="github-icon")
+						a(href="https://plus.google.com/u/0/+alexandrkislov92" target="_blank")
+							img(src="img/icons/google-plus.svg" alt="google-plus-icon")
+						a(href="skype:strannik11.92?call" target="_blank")
+							img(src="img/icons/skype.svg" alt="skype-icon")
+					.col-sm-4
+						p
+							a(href="http://black-sky.github.io/" target="_blank") &copy;Alexander Kislov
+					.col-sm-4
+						p
+							a(href="http://www.freepik.com/free-vector/blue-polygons-background_841049.htm" target="_blank") Background by Freepik
 		script(src="js/main.js")
