--- a/src/style/partials/main-menu/_main-menu.scss
+++ b/src/style/partials/main-menu/_main-menu.scss
@@ -280,10 +280,11 @@ img {
 			-moz-transition: -moz-transform 0.2s;
 			transition: transform 0.2s;
 			@media screen and (max-height: 800px) and (max-width: 1400px) {
-			background-color: rgba(133,176,125, 1);
-			text-align: center;
-			padding: 0 15px;
-			margin: 5px 0;
+			// background-color: rgba(133,176,125, 1);
+			// text-align: center;
+			// padding: 0 15px;
+			// margin: 5px 0;
+			// text-shadow: 0 0 3px #FFFFFF;
 			}
 		}
 	}
@@ -658,12 +659,10 @@ img {
 
 // Контакты
 #contacts {
-	// border-top: 2px solid #666666;
 	font-size: 16px;
 	text-align: center;
 	// background-color: rgba(129, 177, 218, 0.5);
 	width: 100%;
-	// height: 60px;
 	position: absolute;
 	top: 100%;
 	transform: translateY(100%);
@@ -683,8 +682,10 @@ img {
 			color: #000000;
 		}
 		&:focus {
+			color: #000000;
 		}
 		&:active {
+			color: #000000;
 		}
 	}
 	p {
@@ -693,13 +694,28 @@ img {
 		line-height: 52px;
 	}
 	img {
+		transition: all 0.2s ease-in-out;
 		border-radius: 50px;
 		width: 32px;
 		height: 32px;
 		display: inline-block;
 		margin: 10px 50px;
 		&:hover {
-			background-color: #85B07D;
+			background-color: #77CFE2;
+		}
+	}
+	@media screen and (min-width: 1px) and (max-width: 1400px) {
+		img {
+			margin: 5px 25px;
+		}
+		a {
+			margin-top: 5px;
+		}
+		font-size: 14px;
+	}	
+	@media screen and (min-width: 1px) and (max-width: 900px) {
+		img {
+			margin: 5px 10px;
 		}
 	}
 }
@@ -727,4 +743,3 @@ background: url(../img/icons/eye-close.svg) no-repeat;
 		font-size: 20px;
 	}
 }
-
