Add shortcut icon

--- a/src/templates/blink.pug
+++ b/src/templates/blink.pug
@@ -4,6 +4,7 @@ html.no-js(lang="ru")
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		meta(name="robots", content="all")
+		link(rel="shortcut icon" href="../img/icons/icon-eye.ico" type="image/x-icon")
 		link(rel="stylesheet", href="../css/main.css")
 		title Blink - упражнения для глаз
 	body
