--- a/src/style/partials/main-menu/_main-menu.scss
+++ b/src/style/partials/main-menu/_main-menu.scss
@@ -669,7 +669,6 @@ img {
 #contacts {
 	font-size: 16px;
 	text-align: center;
-	// background-color: rgba(129, 177, 218, 0.5);
 	width: 100%;
 	position: absolute;
 	top: 100%;
@@ -707,23 +706,28 @@ img {
 		width: 32px;
 		height: 32px;
 		display: inline-block;
-		margin: 10px 50px;
+		margin: 10px 40px;
 		&:hover {
-			background-color: #77CFE2;
+			background-color: #5EC3DC;
 		}
 	}
 	@media screen and (min-width: 1px) and (max-width: 1400px) {
 		img {
-			margin: 5px 25px;
+			margin: 5px 20px;
 		}
 		a {
 			margin-top: 5px;
 		}
 		font-size: 14px;
 	}	
-	@media screen and (min-width: 1px) and (max-width: 900px) {
+	@media screen and (min-width: 1px) and (max-width: 1000px) {
 		img {
 			margin: 5px 10px;
+		}
+	}
+	@media screen and (min-width: 1px) and (max-width: 700px) {
+		img {
+			margin: 5px 5px;
 		}
 	}
 }
@@ -750,4 +754,100 @@ background: url(../img/icons/eye-close.svg) no-repeat;
 		content: "";
 		font-size: 20px;
 	}
+}
+
+.modal {
+	display: none;
+	/* Hidden by default */
+	position: fixed;
+	/* Stay in place */
+	z-index: 1;
+	/* Sit on top */
+	padding-top: 100px;
+	/* Location of the box */
+	left: 0;
+	top: 0;
+	width: 100%;
+	/* Full width */
+	height: 100%;
+	/* Full height */
+	overflow: auto;
+	/* Enable scroll if needed */
+	background-color: rgb(0, 0, 0);
+	/* Fallback color */
+	background-color: rgba(0, 0, 0, 0.4);
+	/* Black w/ opacity */
+}
+
+/* Modal Content */
+
+.modal-content {
+	position: relative;
+	background-color: #fefefe;
+	margin: auto;
+	padding: 0;
+	border: 1px solid #888;
+	width: 80%;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	-webkit-animation-name: animatetop;
+	-webkit-animation-duration: 0.4s;
+	animation-name: animatetop;
+	animation-duration: 0.4s;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+	from {
+		top: -300px;
+		opacity: 0;
+	}
+
+	to {
+		top: 0;
+		opacity: 1;
+	}
+}
+
+
+@keyframes animatetop {
+	from {
+		top: -300px;
+		opacity: 0;
+	}
+
+	to {
+		top: 0;
+		opacity: 1;
+	}
+}
+
+
+/* The Close Button */
+
+.close {
+	color: white;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+	&:hover, &:focus {
+		color: #000;
+		text-decoration: none;
+		cursor: pointer;
+	}
+}
+
+.modal-header {
+	padding: 2px 16px;
+	background-color: #5cb85c;
+	color: white;
+}
+
+.modal-body {
+	padding: 2px 16px;
+}
+
+.modal-footer {
+	padding: 2px 16px;
+	background-color: #5cb85c;
+	color: white;
 }
