Add donation modal window

--- a/src/index.pug
+++ b/src/index.pug
@@ -37,16 +37,26 @@ html.no-js(lang="ru")
 				.modal-content
 					.modal-header
 						span.close ×
-						h2 Modal Header
+						h2 Donate
 					.modal-body
-						p Some text in the Modal Body
-						p Some other text...
+						table.tg
+							tr
+								th.tg-yw4l Yandex.Money
+								th.tg-yw4l.tg-l XXXXXXXXXXXXX
+							tr
+								td.tg-yw4l WebMoney
+								td.tg-yw4l
+									| XXXXXXXXXXXXX
+									br
+									| XXXXXXXXXXXXX
+									br
+									| XXXXXXXXXXXXX
 					.modal-footer
-					h3 Modal Footer
+						h3 Thank you!
 			#contacts
 				a(href="javascript:closeContacts();").close-contacts
 				.row
-					.col-sm-4
+					.col-md-4
 						a(href="https://github.com/Farengeyt451" target="_blank")
 							img(src="img/icons/github.svg" alt="github-icon")
 						a(href="https://plus.google.com/u/0/+alexandrkislov92" target="_blank")
@@ -55,10 +65,11 @@ html.no-js(lang="ru")
 							img(src="img/icons/skype.svg" alt="skype-icon")
 						a#myBtn(href="#")
 							img(src="img/icons/heart.svg" alt="heart-icon")
-					.col-sm-4
+					.col-md-4
 						p
 							a(href="http://black-sky.github.io/" target="_blank") &copy;Alexander Kislov
-					.col-sm-4
+					.col-md-4
 						p
-							a(href="http://www.freepik.com/free-vector/blue-polygons-background_841049.htm" target="_blank") Background by Freepik
+							a(href="http://www.freepik.com/free-vector/blue-polygons-background_841049.htm" target="_blank") Background&nbsp;/&nbsp;
+							a(href="http://www.freepik.com/free-vector/black-and-white-eye-illustration_758574.htm#term=eye&page=4&position=44" target="_blank") Eye illus. by Freepik
 		script(src="js/main.js")
