--- a/src/style/partials/main-menu/_main-menu.scss
+++ b/src/style/partials/main-menu/_main-menu.scss
@@ -1,5 +1,3 @@
-// Primary style
-
 * {
 	font-family: "Ubuntu", sans-serif;
 	box-sizing: border-box;
@@ -756,30 +754,20 @@ background: url(../img/icons/eye-close.svg) no-repeat;
 	}
 }
 
+// Стили модального окна доната
 .modal {
 	display: none;
-	/* Hidden by default */
 	position: fixed;
-	/* Stay in place */
 	z-index: 1;
-	/* Sit on top */
-	padding-top: 100px;
-	/* Location of the box */
+	padding-top: 25vh;
 	left: 0;
 	top: 0;
 	width: 100%;
-	/* Full width */
 	height: 100%;
-	/* Full height */
 	overflow: auto;
-	/* Enable scroll if needed */
 	background-color: rgb(0, 0, 0);
-	/* Fallback color */
-	background-color: rgba(0, 0, 0, 0.4);
-	/* Black w/ opacity */
+	background-color: rgba(0, 0, 0, 0.2);
 }
-
-/* Modal Content */
 
 .modal-content {
 	position: relative;
@@ -787,27 +775,11 @@ background: url(../img/icons/eye-close.svg) no-repeat;
 	margin: auto;
 	padding: 0;
 	border: 1px solid #888;
-	width: 80%;
+	width: 550px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	-webkit-animation-name: animatetop;
-	-webkit-animation-duration: 0.4s;
 	animation-name: animatetop;
 	animation-duration: 0.4s;
 }
-
-/* Add Animation */
-@-webkit-keyframes animatetop {
-	from {
-		top: -300px;
-		opacity: 0;
-	}
-
-	to {
-		top: 0;
-		opacity: 1;
-	}
-}
-
 
 @keyframes animatetop {
 	from {
@@ -821,13 +793,11 @@ background: url(../img/icons/eye-close.svg) no-repeat;
 	}
 }
 
-
-/* The Close Button */
-
 .close {
-	color: white;
+	line-height: 36px;
+	color: #666666;
 	float: right;
-	font-size: 28px;
+	font-size: 30px;
 	font-weight: bold;
 	&:hover, &:focus {
 		color: #000;
@@ -837,17 +807,96 @@ background: url(../img/icons/eye-close.svg) no-repeat;
 }
 
 .modal-header {
-	padding: 2px 16px;
-	background-color: #5cb85c;
-	color: white;
+	padding: 10px 16px;
+	background-image: url(../img/gplaypattern.png);
+	color: #666666;
+	h2 {
+		margin: 0;
+	}
 }
 
 .modal-body {
-	padding: 2px 16px;
+	p {
+		margin: 0;
+	}
 }
 
 .modal-footer {
 	padding: 2px 16px;
-	background-color: #5cb85c;
+	background-color: #A5DCA1;
 	color: white;
+	h3 {
+		margin: 0;
+	}
+}
+
+// Стили таблицы доната
+.tg {
+	color: #666666;
+	width: 100%;
+	border-collapse: collapse;
+	border-spacing: 0;
+	td {
+		font-size: 18px;
+		padding: 10px 5px;
+		border-style: solid;
+		border-width: 0px;
+		overflow: hidden;
+		word-break: normal;
+		border-top-width: 2px;
+		border-bottom-width: 2px;
+
+	}
+	th {
+		font-size: 18px;
+		font-weight: normal;
+		padding: 10px 5px;
+		border-style: solid;
+		border-width: 0px;
+		overflow: hidden;
+		word-break: normal;
+		border-top-width: 2px;
+		border-bottom-width: 2px;
+
+	}
+	.tg-baqh {
+		text-align: center;
+		vertical-align: top;
+	}
+	.tg-yw4l {
+		padding-left: 16px;
+		border-color: #666666;
+		vertical-align: center;
+	}
+}
+
+@media screen and (max-width: 1600px) {
+	.modal-header {
+		h2 {
+			font-size: 16px;
+		}
+	}
+	.modal-footer {
+		h3 {
+			font-size: 14px;
+		}
+	}
+	.close {
+		line-height: 24px;
+		font-size: 20px;
+	}
+	.tg {
+		td {
+			font-size: 14px;
+		}
+		th {
+			font-size: 14px;
+		}
+	}
+}
+
+@media screen and (max-width: 800px) {
+	.modal-content {
+		width: 300px;
+	}
 }
