--- a/src/templates/blink.pug
+++ b/src/templates/blink.pug
@@ -29,6 +29,8 @@ html.no-js(lang="ru")
 		main
 		.container-fluid
 			.row
+				.timer-cont
+					span#timer
 				.col-sm-12.main-cont#gradient
 					button.btn#startanim Начать
 					button.btn-end.btn-end-hide#tomain(onclick="location.href='../index.html'") На главную
